Fix overflow x on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,7 @@
 body {
     background-color: #06113C;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
+    height: 100%;
 }
 
 header {
